Remove data files from commits

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,22 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_url = 'https://opportunitiesforyoungkenyans.co.ke'\n",
-    "pagination_date_pattern = base_url + '/2024/06/13'\n",
-    "pagination_pattern = pagination_date_pattern + '/page/3'\n",
-    "\n",
-    "headers = {\n",
-    "  'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +50,22 @@
     "\n",
     "    if section:\n",
     "      post_article = section.find('article', class_='post-content')\n",
-    "\n",
     "      if post_article:\n",
-    "        post_container = post_article.find('div', class_='clearfix').text\n",
-    "        return post_container"
+    "        # post_container = post_article.find('div', class_='clearfix').text\n",
+    "        post_container = post_article.find('div', class_='clearfix')\n",
+    "        \n",
+    "        if post_container:\n",
+    "          post_container_text =  clean_text(post_container.get_text(separator=\" \", strip=True))\n",
+    "\n",
+    "          if len(post_container_text) > 10000:\n",
+    "            post_container_text = len(post_container_text)\n",
+    "            \n",
+    "          return post_container_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +116,6 @@
     "          'content': content,\n",
     "          'date': date\n",
     "        })\n",
-    "\n",
     "      return job_posts\n",
     "  else:\n",
     "    return []\n",
@@ -136,118 +127,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d 1\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/1/page/1\n",
-      "Error 404 found on https://opportunitiesforyoungkenyans.co.ke/2018/1/1/page/2. Stopping search.\n",
+      "g\n",
+      "k\n",
+      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/1/page/2. Status code: 404\n",
       "Day 1 over.\n",
+      "d 2\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/2/page/1\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/2/page/2. Status code: 404\n",
       "Day 2 over.\n",
+      "d 3\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/3/page/1\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/3/page/2. Status code: 404\n",
       "Day 3 over.\n",
+      "d 4\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/4/page/1\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/4/page/2. Status code: 404\n",
+      "g\n",
+      "h\n",
+      "i\n",
+      "Error 404 found on https://opportunitiesforyoungkenyans.co.ke/2018/1/4/page/2. Stopping search.\n",
       "Day 4 over.\n",
+      "d 5\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/5/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/5/page/2\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/5/page/3. Status code: 404\n",
       "Day 5 over.\n",
+      "d 6\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/6/page/1\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/6/page/2. Status code: 404\n",
       "Day 6 over.\n",
+      "d 7\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/7/page/1\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/7/page/2. Status code: 404\n",
       "Day 7 over.\n",
+      "d 8\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/8/page/1\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/8/page/2. Status code: 404\n",
       "Day 8 over.\n",
+      "d 9\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/9/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/9/page/2\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/9/page/3. Status code: 404\n",
       "Day 9 over.\n",
+      "d 10\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/10/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/10/page/2\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/10/page/3. Status code: 404\n",
       "Day 10 over.\n",
+      "d 11\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/11/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/11/page/2\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/11/page/3. Status code: 404\n",
       "Day 11 over.\n",
+      "d 12\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/12/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/12/page/2\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/12/page/3\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/12/page/4. Status code: 404\n",
       "Day 12 over.\n",
+      "d 13\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/13/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/13/page/2\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/13/page/3. Status code: 404\n",
       "Day 13 over.\n",
+      "d 14\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/14/page/1\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/14/page/2. Status code: 404\n",
       "Day 14 over.\n",
+      "d 15\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/15/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/15/page/2\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/15/page/3. Status code: 404\n",
       "Day 15 over.\n",
+      "d 16\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/16/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/16/page/2\n",
+      "g\n",
+      "k\n",
       "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/16/page/3. Status code: 404\n",
       "Day 16 over.\n",
+      "d 17\n",
+      "e\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/17/page/1\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/17/page/2\n",
+      "g\n",
+      "h\n",
+      "j\n",
       "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/17/page/3\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/17/page/4. Status code: 404\n",
-      "Day 17 over.\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/18/page/1\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/18/page/2\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/18/page/3. Status code: 404\n",
-      "Day 18 over.\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/19/page/1\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/19/page/2\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/19/page/3\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/19/page/4\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/19/page/5\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/19/page/6. Status code: 404\n",
-      "Day 19 over.\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/20/page/1\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/20/page/2\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/20/page/3. Status code: 404\n",
-      "Day 20 over.\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/21. Status code: 404\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/22/page/1\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/22/page/2\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/22/page/3\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/22/page/4\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/22/page/5. Status code: 404\n",
-      "Day 22 over.\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/23/page/1\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/23/page/2. Status code: 404\n",
-      "Day 23 over.\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/24/page/1\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/24/page/2\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/24/page/3. Status code: 404\n",
-      "Day 24 over.\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/25/page/1\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/25/page/2. Status code: 404\n",
-      "Day 25 over.\n",
-      "Found https://opportunitiesforyoungkenyans.co.ke/2018/1/26/page/1\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/26/page/2. Status code: 404\n",
-      "Day 26 over.\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/27. Status code: 404\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/28. Status code: 404\n",
-      "Failed to retrieve https://opportunitiesforyoungkenyans.co.ke/2018/1/29. Status code: 404\n",
-      "No posts found at https://opportunitiesforyoungkenyans.co.ke/2018/1/26/page/2. Skipping.\n",
-      "No posts found at https://opportunitiesforyoungkenyans.co.ke/2018/1/26/page/2. Skipping.\n",
-      "Month 1 over.\n",
-      "Year 2018 over.\n",
-      "Count of merged jobs: 345\n"
+      "g\n"
      ]
     }
    ],
@@ -256,7 +357,7 @@
     "  headers = {\n",
     "  'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
     "  }\n",
-    "  \n",
+    "\n",
     "  first_year = 2018\n",
     "  first_month = 1\n",
     "  first_day = 1\n",
@@ -273,47 +374,67 @@
     "\n",
     "  jobs_from_all_dates = []\n",
     "  merged_jobs = []\n",
-    "\n",
+    "  print('a')\n",
     "  for year in range(first_year, year_today + 1):\n",
+    "    print('b')\n",
+    "    \n",
     "    if year == year_today:\n",
     "      last_month = month_today\n",
     "    else:\n",
     "      last_month = 12\n",
-    "\n",
+    "    \n",
     "    for month in range(first_month, last_month + 1):\n",
+    "      print('c')\n",
+    "      \n",
     "      if year == year_today and month == month_today:\n",
     "        last_day = day_today\n",
     "      else:\n",
     "        last_day = 31\n",
     "\n",
     "      for day in range(first_day, last_day + 1):\n",
+    "        print('d', day)\n",
+    "          \n",
     "        current_date_url = f'{base_url}/{year}/{month}/{day}'\n",
     "        current_date_url_response = requests.get(current_date_url, headers=headers)\n",
     "\n",
     "        if current_date_url_response.status_code == 200:\n",
+    "          print('e')\n",
+    "            \n",
     "          soup = BeautifulSoup(current_date_url_response.content, 'html.parser')\n",
     "          date_url_body_tag = soup.body\n",
     "\n",
     "          if date_url_body_tag and 'error404' in date_url_body_tag.get('class', []):\n",
-    "            print(f'No posts found at {page_url}. Skipping.')\n",
+    "            print('f')\n",
+    "              \n",
+    "            print(f'No posts found at {current_date_url}. Skipping.')\n",
     "            continue\n",
     "          else:\n",
     "            for page_count in range(1, 1000):\n",
+    "              print('g')\n",
+    "                \n",
     "              page_url = f'{current_date_url}/page/{page_count}'\n",
     "              page_url_response = requests.get(page_url, headers=headers)\n",
     "              \n",
     "              if page_url_response.status_code == 200:\n",
+    "                print('h')\n",
+    "                  \n",
     "                page_url_soup = BeautifulSoup(page_url_response.content, 'html.parser')\n",
     "                page_url_body_tag = page_url_soup.body\n",
     "\n",
     "                if page_url_body_tag and 'error404' in page_url_body_tag.get('class', []):\n",
+    "                  print('i')\n",
+    "                    \n",
     "                  print(f'Error 404 found on {page_url}. Stopping search.')\n",
     "                  break # Stop searching further pages because if current page is not found then there are no more pages for this date.\n",
     "                else:\n",
+    "                  print('j')\n",
+    "                    \n",
     "                  jobs_per_date = get_job_postings(page_url, headers)\n",
     "                  jobs_from_all_dates.append(jobs_per_date)\n",
     "                  print(f'Found {page_url}')\n",
     "              else:\n",
+    "                print('k')\n",
+    "                \n",
     "                print(f'Failed to retrieve {page_url}. Status code: {page_url_response.status_code}')\n",
     "                break  # Stop searching further pages on HTTP error\n",
     "            \n",
@@ -338,6 +459,20 @@
     "df = pd.DataFrame(all_jobs)\n",
     "df.to_csv('job_postings.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
