Add example env

--- a/job_category_prediction_model.ipynb
+++ b/job_category_prediction_model.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Uncomment to install the following required packages\n",
-    "# pip pandas numpy scikit-learn nltk matplotlib seaborn"
+    "# pip pandas numpy scikit-learn nltk matplotlib seaborn python-dotenv"
    ]
   },
   {
@@ -110,6 +110,7 @@
     "import seaborn as sns\n",
     "import os\n",
     "\n",
+    "from dotenv import load_dotenv\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.tokenize import word_tokenize\n",
@@ -127,7 +128,9 @@
     "\n",
     "nltk.download('stopwords')\n",
     "nltk.download('punkt')\n",
-    "nltk.download('wordnet')"
+    "nltk.download('wordnet')\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -246,94 +249,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cd686f36-9fbf-4687-9171-f3df14944801",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TITLE</th>\n",
-       "      <th>LINK</th>\n",
-       "      <th>JOB DESCRIPTION</th>\n",
-       "      <th>DATE</th>\n",
-       "      <th>CATEGORY</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Tuskys Supermarket Are Hiring</td>\n",
-       "      <td>https://opportunitiesforyoungkenyans.co.ke/201...</td>\n",
-       "      <td>This last week of January, Tuskys supermarket ...</td>\n",
-       "      <td>1/26/2018</td>\n",
-       "      <td>Other</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Admin Assistant Job Opportune</td>\n",
-       "      <td>https://opportunitiesforyoungkenyans.co.ke/201...</td>\n",
-       "      <td>We are looking to hire an administrative assis...</td>\n",
-       "      <td>1/25/2018</td>\n",
-       "      <td>Admin, HR, CS, Office Support</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>KPC Hiring Graduate Trainees</td>\n",
-       "      <td>https://opportunitiesforyoungkenyans.co.ke/201...</td>\n",
-       "      <td>MANAGEMENT TRAINEE Vacancy Reference: MANAGEME...</td>\n",
-       "      <td>1/24/2018</td>\n",
-       "      <td>Internships, Fellowships, Scholarships</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           TITLE  \\\n",
-       "0  Tuskys Supermarket Are Hiring   \n",
-       "1  Admin Assistant Job Opportune   \n",
-       "2   KPC Hiring Graduate Trainees   \n",
-       "\n",
-       "                                                LINK  \\\n",
-       "0  https://opportunitiesforyoungkenyans.co.ke/201...   \n",
-       "1  https://opportunitiesforyoungkenyans.co.ke/201...   \n",
-       "2  https://opportunitiesforyoungkenyans.co.ke/201...   \n",
-       "\n",
-       "                                     JOB DESCRIPTION       DATE  \\\n",
-       "0  This last week of January, Tuskys supermarket ...  1/26/2018   \n",
-       "1  We are looking to hire an administrative assis...  1/25/2018   \n",
-       "2  MANAGEMENT TRAINEE Vacancy Reference: MANAGEME...  1/24/2018   \n",
-       "\n",
-       "                                 CATEGORY  \n",
-       "0                                   Other  \n",
-       "1           Admin, HR, CS, Office Support  \n",
-       "2  Internships, Fellowships, Scholarships  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "original_labeled_df.head(3)"
    ]
@@ -1218,7 +1137,7 @@
     "  year_today = date_today.year\n",
     "  month_today = date_today.month\n",
     "\n",
-    "  base_url = 'https://opportunitiesforyoungkenyans.co.ke'\n",
+    "  base_url =  os.getenv('BASE_URL')\n",
     "\n",
     "  jobs_from_all_dates = []\n",
     "  merged_jobs = []\n",
@@ -1433,118 +1352,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "1461e599-92e8-465f-8662-fd68fd0ce34d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TITLE</th>\n",
-       "      <th>LINK</th>\n",
-       "      <th>JOB DESCRIPTION</th>\n",
-       "      <th>DATE</th>\n",
-       "      <th>Cleaned Job Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CIC Group Hiring Procurement Assistant</td>\n",
-       "      <td>https://opportunitiesforyoungkenyans.co.ke/202...</td>\n",
-       "      <td>Full Time Nairobi Posted on September 21, 2023...</td>\n",
-       "      <td>9/22/2023</td>\n",
-       "      <td>full time nairobi posted september close septe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>World Bank Group Hiring : Investment Officer, ...</td>\n",
-       "      <td>https://opportunitiesforyoungkenyans.co.ke/202...</td>\n",
-       "      <td>Welcome to the combined listing of current job...</td>\n",
-       "      <td>9/22/2023</td>\n",
-       "      <td>welcome combined listing current opening world...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>KEMRI Hiring In 10 Sections</td>\n",
-       "      <td>https://opportunitiesforyoungkenyans.co.ke/202...</td>\n",
-       "      <td>KEMRI has built a strong professional team of ...</td>\n",
-       "      <td>9/22/2023</td>\n",
-       "      <td>kemri built strong professional team employee ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Relationship Manager Wanted</td>\n",
-       "      <td>https://opportunitiesforyoungkenyans.co.ke/202...</td>\n",
-       "      <td>JOB PURPOSE: RELATIONSHIP MANAGER  KIAMBU ROAD...</td>\n",
-       "      <td>9/22/2023</td>\n",
-       "      <td>purpose relationship manager kiambu road branc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Action Aid Kenya Hiring Local Rights Programme...</td>\n",
-       "      <td>https://opportunitiesforyoungkenyans.co.ke/202...</td>\n",
-       "      <td>Grade: E Salary: Kshs. 189,484 per month Contr...</td>\n",
-       "      <td>9/22/2023</td>\n",
-       "      <td>grade e salary kshs per month contract duratio...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               TITLE  \\\n",
-       "0             CIC Group Hiring Procurement Assistant   \n",
-       "1  World Bank Group Hiring : Investment Officer, ...   \n",
-       "2                        KEMRI Hiring In 10 Sections   \n",
-       "3                        Relationship Manager Wanted   \n",
-       "4  Action Aid Kenya Hiring Local Rights Programme...   \n",
-       "\n",
-       "                                                LINK  \\\n",
-       "0  https://opportunitiesforyoungkenyans.co.ke/202...   \n",
-       "1  https://opportunitiesforyoungkenyans.co.ke/202...   \n",
-       "2  https://opportunitiesforyoungkenyans.co.ke/202...   \n",
-       "3  https://opportunitiesforyoungkenyans.co.ke/202...   \n",
-       "4  https://opportunitiesforyoungkenyans.co.ke/202...   \n",
-       "\n",
-       "                                     JOB DESCRIPTION       DATE  \\\n",
-       "0  Full Time Nairobi Posted on September 21, 2023...  9/22/2023   \n",
-       "1  Welcome to the combined listing of current job...  9/22/2023   \n",
-       "2  KEMRI has built a strong professional team of ...  9/22/2023   \n",
-       "3  JOB PURPOSE: RELATIONSHIP MANAGER  KIAMBU ROAD...  9/22/2023   \n",
-       "4  Grade: E Salary: Kshs. 189,484 per month Contr...  9/22/2023   \n",
-       "\n",
-       "                             Cleaned Job Description  \n",
-       "0  full time nairobi posted september close septe...  \n",
-       "1  welcome combined listing current opening world...  \n",
-       "2  kemri built strong professional team employee ...  \n",
-       "3  purpose relationship manager kiambu road branc...  \n",
-       "4  grade e salary kshs per month contract duratio...  "
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unlabeled_df_copy = cleaned_unlabeled_df.copy()\n",
     "unlabeled_df_copy['Cleaned Job Description'] = unlabeled_df_copy['JOB DESCRIPTION'].apply(preprocess_text, custom_stopwords=custom_stopwords)\n",
